[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Assets/Icons/White/General/add_1_72px.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/SubOptions/InfoSettings/SubInfo.gd" type="Script" id=2]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 2
vertical = true

[node name="SubInfo" type="VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="SubInfoMain" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_default_cursor_shape = 2
icon = ExtResource( 1 )
clip_text = true
align = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_top = 34.0
margin_right = 150.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 3.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="SubInfoVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 150.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_constants/separation = 5

[connection signal="pressed" from="SubInfoMain" to="." method="_on_SubInfoMain_pressed"]
